--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
 # Folder config file
 Desktop.ini
 
@@ -14,23 +10,70 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 
-# =========================
-# Operating System Files
-# =========================
+# Icon must ends with two \r.
+Icon
 
+# Directories #
+/build/
+/bin/
+target/
+ 
+*.class
+ 
+# Package Files #
+*.jar
+*.war
+*.ear
+*.db
+ 
+######################
+# Windows
+######################
+ 
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+ 
+# Folder config file
+Desktop.ini
+ 
+######################
 # OSX
-# =========================
-
+######################
+ 
 .DS_Store
+.svn
 .AppleDouble
 .LSOverride
-
-# Icon must ends with two \r.
-Icon
-
+ 
 # Thumbnails
 ._*
-
+ 
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+ 
+######################
+# Eclipse
+######################
+ 
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+/src/main/resources/rebel.xml
+# External tool builders
+.externalToolBuilders/
+ 
+# Locally stored "Eclipse launch configurations"
+*.launch
